--- a/src/style/base/icon.css
+++ b/src/style/base/icon.css
@@ -1,27 +1,27 @@
 
 /* Base Icon class */
-.icon-32{
+.mi-32{
     width: 32px;
     height: 32px;
     min-width: 32px;
     min-height: 32px;
 }
 
-.icon-24{
+.mi-24{
     width: 24px;
     height: 24px;
     min-width: 24px;
     min-height: 24px;
 }
 
-.icon-20{
+.mi-20{
     width: 20px;
     height: 20px;
     min-width: 20px;
     min-height: 20px;
 }
 
-.icon-18{
+.mi-18{
     width: 18px;
     height: 18px;
     min-width: 18px;
@@ -37,116 +37,239 @@
 
 /* Icon in login */
 
-/* .mi-user{
-    background: url("../../assets/icon/user.png") no-repeat left center;
+.mi-task-logo{
+    background: url(@/assets/icon/icon.svg) -608px -64px no-repeat;
 }
 
-.mi-password{
-    background: url("../../assets/icon/pass.png") no-repeat left center;
+.mi-carret-down-white{
+    -webkit-mask-image: url(@/assets/icon/icon.svg);
+    -moz-mask-image: url(@/assets/icon/icon.svg);
+    -ms-mask-image: url(@/assets/icon/icon.svg);
+    -o-mask-image: url(@/assets/icon/icon.svg);
+    mask-image: url(@/assets/icon/icon.svg);
+    -webkit-mask-position: -232px -104px;
+    -moz-mask-position: -232px -104px;
+    -ms-mask-position: -232px -104px;
+    -o-mask-position: -232px -104px;
+    mask-position: -232px -104px;
+    -webkit-mask-repeat: no-repeat;
+    -moz-mask-repeat: no-repeat;
+    -ms-mask-repeat: no-repeat;
+    -o-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    background-color: #ffffff;
 }
 
-/* Icon in sidebar */
-
-/* .mi-logo{
-    background: url("../../assets/logo/amis.png") no-repeat;
-    background-size: contain;
+.mi-carret-right-white{
+    -webkit-mask-image: url(@/assets/icon/icon.svg);
+    -moz-mask-image: url(@/assets/icon/icon.svg);
+    -ms-mask-image: url(@/assets/icon/icon.svg);
+    -o-mask-image: url(@/assets/icon/icon.svg);
+    mask-image: url(@/assets/icon/icon.svg);
+    -webkit-mask-position: -296px -104px;
+    -moz-mask-position: -296px -104px;
+    -ms-mask-position: -296px -104px;
+    -o-mask-position: -296px -104px;
+    mask-position: -296px -104px;
+    -webkit-mask-repeat: no-repeat;
+    -moz-mask-repeat: no-repeat;
+    -ms-mask-repeat: no-repeat;
+    -o-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    background-color: #ffffff;
 }
 
-.mi-request{
-    background: url("../../assets/icon/request.axd") no-repeat center center;
-    margin: 0 2px 0 8px;
+.mi-plus-white{
+    -webkit-mask-image: url(@/assets/icon/icon.svg);
+    -moz-mask-image: url(@/assets/icon/icon.svg);
+    -ms-mask-image: url(@/assets/icon/icon.svg);
+    -o-mask-image: url(@/assets/icon/icon.svg);
+    mask-image: url(@/assets/icon/icon.svg);
+    -webkit-mask-position: -164px -100px;
+    -moz-mask-position: -164px -100px;
+    -ms-mask-position: -164px -100px;
+    -o-mask-position: -164px -100px;
+    mask-position: -164px -100px;
+    -webkit-mask-repeat: no-repeat;
+    -moz-mask-repeat: no-repeat;
+    -ms-mask-repeat: no-repeat;
+    -o-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    background-color: #ffffff;
 }
 
-.mi-save {
-    background: url("../../assets/icon/save.axd") no-repeat;
-    background-size: contain;
-    margin-right: 2px;
+.mi-search{
+    -webkit-mask-image: url(@/assets/icon/icon.svg);
+    -moz-mask-image: url(@/assets/icon/icon.svg);
+    -ms-mask-image: url(@/assets/icon/icon.svg);
+    -o-mask-image: url(@/assets/icon/icon.svg);
+    mask-image: url(@/assets/icon/icon.svg);
+    -webkit-mask-position: -164px -132px;
+    -moz-mask-position: -164px -132px;
+    -ms-mask-position: -164px -132px;
+    -o-mask-position: -164px -132px;
+    mask-position: -164px -132px;
+    -webkit-mask-repeat: no-repeat;
+    -moz-mask-repeat: no-repeat;
+    -ms-mask-repeat: no-repeat;
+    -o-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    background-color: #ffffff;
 }
 
-.mi-arrow-down{
-    background:  url(@/assets/icon/arrow.axd) no-repeat -7px -8px;
-	width: 8px;
-	height: 5px;
+.mi-notification{
+    -webkit-mask-image: url(@/assets/icon/icon.svg);
+    -moz-mask-image: url(@/assets/icon/icon.svg);
+    -ms-mask-image: url(@/assets/icon/icon.svg);
+    -o-mask-image: url(@/assets/icon/icon.svg);
+    mask-image: url(@/assets/icon/icon.svg);
+    -webkit-mask-position: -340px -836px;
+    -moz-mask-position: -340px -836px;
+    -ms-mask-position: -340px -836px;
+    -o-mask-position: -340px -836px;
+    mask-position: -340px -836px;
+    -webkit-mask-repeat: no-repeat;
+    -moz-mask-repeat: no-repeat;
+    -ms-mask-repeat: no-repeat;
+    -o-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
 }
 
-.mi-book {
-    background: url("../../assets/icon/book.axd") no-repeat;
-    background-size: contain;
+.mi-question {
+    -webkit-mask-image: url('@/assets/icon/icon.svg');
+    -moz-mask-image: url('@/assets/icon/icon.svg');
+    -ms-mask-image: url('@/assets/icon/icon.svg');
+    -o-mask-image: url('@/assets/icon/icon.svg');
+    mask-image: url('@/assets/icon/icon.svg');
+    -webkit-mask-position: -324px -388px;
+    -moz-mask-position: -324px -388px;
+    -ms-mask-position: -324px -388px;
+    -o-mask-position: -324px -388px;
+    mask-position: -324px -388px;
+    -webkit-mask-repeat: no-repeat;
+    -moz-mask-repeat: no-repeat;
+    -ms-mask-repeat: no-repeat;
+    -o-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    background-color: #ffffff;
 }
 
-.mi-edit {
-    background: url("../../assets/icon/edit.png") no-repeat center center;
+.mi-book{
+    -webkit-mask-image: url('@/assets/icon/icon.svg');
+    -moz-mask-image: url('@/assets/icon/icon.svg');
+    -ms-mask-image: url('@/assets/icon/icon.svg');
+    -o-mask-image: url('@/assets/icon/icon.svg');
+    mask-image: url('@/assets/icon/icon.svg');
+    -webkit-mask-position: -676px -676px;
+    -moz-mask-position: -676px -676px;
+    -ms-mask-position: -676px -676px;
+    -o-mask-position: -676px -676px;
+    mask-position: -676px -676px;
+    -webkit-mask-repeat: no-repeat;
+    -moz-mask-repeat: no-repeat;
+    -ms-mask-repeat: no-repeat;
+    -o-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    background-color: #666666;
 }
 
-.mi-make-request {
-    background: url("../../assets/icon/make-request.axd") no-repeat;
-    background-size: contain;
+.mi-show-detail{
+    -webkit-mask-image: url('@/assets/icon/icon.svg');
+    -moz-mask-image: url('@/assets/icon/icon.svg');
+    -ms-mask-image: url('@/assets/icon/icon.svg');
+    -o-mask-image: url('@/assets/icon/icon.svg');
+    mask-image: url('@/assets/icon/icon.svg');
+    -webkit-mask-position: -740px -292px;
+    -moz-mask-position: -740px -292px;
+    -ms-mask-position: -740px -292px;
+    -o-mask-position: -740px -292px;
+    mask-position: -740px -292px;
+    -webkit-mask-repeat: no-repeat;
+    -moz-mask-repeat: no-repeat;
+    -ms-mask-repeat: no-repeat;
+    -o-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    background-color: #eeeeef;
 }
 
 
-.mi-pay-request {
-    background: url("../../assets/icon/pay-request.png") no-repeat;
-    background-size: contain;
+.mi-home{
+    -webkit-mask-image: url('@/assets/icon/icon.svg');
+    -moz-mask-image: url('@/assets/icon/icon.svg');
+    -ms-mask-image: url('@/assets/icon/icon.svg');
+    -o-mask-image: url('@/assets/icon/icon.svg');
+    mask-image: url('@/assets/icon/icon.svg');
+    -webkit-mask-position: -36px -132px;
+    -moz-mask-position: -36px -132px;
+    -ms-mask-position: -36px -132px;
+    -o-mask-position: -36px -132px;
+    mask-position: -36px -132px;
+    -webkit-mask-repeat: no-repeat;
+    -moz-mask-repeat: no-repeat;
+    -ms-mask-repeat: no-repeat;
+    -o-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    background-color: #ffffff;
 }
 
-.mi-delete-request {
-    background: url("../../assets/icon/delete-request.png") no-repeat center center;
+.mi-my-task{
+    -webkit-mask-image: url('@/assets/icon/icon.svg');
+    -moz-mask-image: url('@/assets/icon/icon.svg');
+    -ms-mask-image: url('@/assets/icon/icon.svg');
+    -o-mask-image: url('@/assets/icon/icon.svg');
+    mask-image: url('@/assets/icon/icon.svg');
+    -webkit-mask-position: -516px -132px;
+    -moz-mask-position: -516px -132px;
+    -ms-mask-position: -516px -132px;
+    -o-mask-position: -516px -132px;
+    mask-position: -516px -132px;
+    -webkit-mask-repeat: no-repeat;
+    -moz-mask-repeat: no-repeat;
+    -ms-mask-repeat: no-repeat;
+    -o-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    background-color: #ffffff;
 }
 
-.mi-send-customer {
-    background: url("../../assets/icon/send-customer.axd") no-repeat;
-    background-size: contain;
+
+.mi-chart{
+    -webkit-mask-image: url('@/assets/icon/icon.svg');
+    -moz-mask-image: url('@/assets/icon/icon.svg');
+    -ms-mask-image: url('@/assets/icon/icon.svg');
+    -o-mask-image: url('@/assets/icon/icon.svg');
+    mask-image: url('@/assets/icon/icon.svg');
+    -webkit-mask-position: -644px -36px;
+    -moz-mask-position: -644px -36px;
+    -ms-mask-position: -644px -36px;
+    -o-mask-position: -644px -36px;
+    mask-position: -644px -36px;
+    -webkit-mask-repeat: no-repeat;
+    -moz-mask-repeat: no-repeat;
+    -ms-mask-repeat: no-repeat;
+    -o-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    background-color: #ffffff;
 }
 
-.mi-recall-request {
-    background: url("../../assets/icon/recall-request.axd") no-repeat;
-    background-size: contain;
+.mi-collapse{
+    background: url('@/assets/icon/icon.svg') -676px -644px no-repeat;
 }
 
-
-.mi-browse{
-    background: url('../../assets/icon/browse.png') no-repeat center center;
-
+.mi-setting{
+    -webkit-mask-image: url('@/assets/icon/icon.svg');
+    -moz-mask-image: url('@/assets/icon/icon.svg');
+    -ms-mask-image: url('@/assets/icon/icon.svg');
+    -o-mask-image: url('@/assets/icon/icon.svg');
+    mask-image: url('@/assets/icon/icon.svg');
+    -webkit-mask-position: -644px -324px;
+    -moz-mask-position: -644px -324px;
+    -ms-mask-position: -644px -324px;
+    -o-mask-position: -644px -324px;
+    mask-position: -644px -324px;
+    -webkit-mask-repeat: no-repeat;
+    -moz-mask-repeat: no-repeat;
+    -ms-mask-repeat: no-repeat;
+    -o-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    background-color: #eeeeef;
 }
-
-/* Icon in pagination */
-
-/* .mi-double-prev {
-    background: url("../../assets/icon/double_prev.axd") no-repeat;
-    background-size: contain;
-}
-
-.mi-double-next {
-    background: url("../../assets/icon/double_next.axd") no-repeat;
-    background-size: contain;
-}
-
-.mi-prev {
-    background: url("../../assets/icon/prev.axd") no-repeat;
-    background-size: contain;
-}
-
-.mi-next {
-    background: url("../../assets/icon/next.axd") no-repeat;
-    background-size: contain;
-}
-
-.mi-reload {
-    background: url("../../assets/icon/load.axd") no-repeat;
-    background-size: contain;
-} */
-
-/* Icon in dialog */
-
-/* .mi-close{
-    background: url("../../assets/icon/close.png") no-repeat center center;
-    background-size: contain;
-}
-
-.mi-save1{
-    background: url('../../assets/icon/save.png') no-repeat center center;
-}
-
-.mi-cancel{
-    background: url('../../assets/icon/cancel.png') no-repeat center center;
-} */ 
