--- a/src/style/base.css
+++ b/src/style/base.css
@@ -68,41 +68,56 @@
     cursor: pointer;
 }
 
+
+.relative{
+    position: relative;
+}
+
+.absolute{
+    position: absolute;
+}
 /******
     Padding Section
 *******/
 
+.m-pl0{
+    padding-left: 0px !important;
+}
+
+.m-pr0{
+    padding-right: 0px !important;
+}
 
 .m-pt4 {
-    padding-top: 4px;
+    padding-top: 4px !important;
 }
 
 .m-pb4{
-    padding-bottom: 4px;
+    padding-bottom: 4px !important;
 }
 
 .m-pr4 {
-    padding-right: 4px;
+    padding-right: 4px !important;
 }
 
 .m-pl4 {
-    padding-left: 4px;
+    padding-left: 4px !important;
 }
 
 .m-pr6 {
-    padding-right: 6px;
+    padding-right: 6px !important;
 }
 
 .m-pl6 {
-    padding-left: 6px;
+    padding-left: 6px !important;
 }
 
 .m-pr8{
-    padding-right: 8px;
+    padding-right: 8px !important;
 }
 
 .m-pl8{
-    padding-left: 8px;
+    padding-left: 8px !important;
 }
 
 .m-pt8{
@@ -110,11 +125,15 @@
 }
 
 .m-pb8{
-    padding-bottom: 8px;
+    padding-bottom: 8px !important;
 }
 
 .m-pt16{
     padding-top: 16px !important;
+}
+
+.m-pl24{
+    padding-left: 24px !important;
 }
 
 /******
@@ -124,6 +143,7 @@
 .m-m0{
     margin: 0 !important;
 }
+
 
 .m-ml4 {
     margin-left: 4px;
@@ -178,7 +198,7 @@
 }
 
 .m-h32{
-    height: 32px;
+    height: 32px !important;
 }
 
 .m-w100{
@@ -207,8 +227,16 @@
     background-color: #e1e1e1;
 }
 
+.no-border{
+    border: none !important;
+}
+
 .m-color-white{
     background-color: #fff;
+}
+
+.m-white{
+    color: #fff !important;
 }
 
 
@@ -238,11 +266,11 @@
 }
 
 .fs-14{
-    font-size: 14px;
+    font-size: 14px !important;
 }
 
 .fs-12{
-    font-size: 12px;
+    font-size: 12px !important;
 }
 
 
