--- a/src/style/main.css
+++ b/src/style/main.css
@@ -79,6 +79,6 @@ h6 {
   height: calc(100vh - var(--layout-header-height));
 }
 
-.m-dashboard{
+.container{
   background: url(@/assets/background/dashboard-bg-1.jpg) -0 -40px no-repeat;
 }
