--- a/src/assets/style/pages/login-page.css
+++ b/src/assets/style/pages/login-page.css
@@ -3,8 +3,8 @@
     display: flex;
     justify-content: center;
     height: 100vh;
-    background-image: url('../../assets/background/login.jpg');
-    background-position: center;
+    background-image: url('@/assets/background/login.jpg');
+    background-position: center center;
     background-size: cover;
     position: relative;
 }
