--- a/src/assets/style/components/button.css
+++ b/src/assets/style/components/button.css
@@ -18,18 +18,19 @@
 
 .m-button.m-btn-primary{
     position: relative;
-    width: 100%;
-    font-size: 16px;
+    font-size: 15px;
+    font-family: "GoogleSans-Regular" ,Roboto, Helvetica, Arial, sans-serif !important;
     font-weight: 500;
     color: #fff;
     background-color: var(--primary-blue-color);
     border-radius: 4px;
     text-align: center;
+    padding: 0 8px;
 }
 
 .m-button.m-btn-primary:hover{
-    background-color: #384fd5;
     box-shadow: 0 2px 15px rgba(42,126,252,.25);
+    background-color: var(--background-hover-color-2);
     transition: all .5s;
 }
 
@@ -46,6 +47,11 @@
 .m-button-xl{
     height: var(--button-height-xl);
     line-height: var(--button-height-xl);
+}
+
+.m-button-l{
+    height: var(--button-height-l);
+    line-height: var(--button-height-l);
 }
 
 .m-button-m{
@@ -75,7 +81,12 @@
     background-color: #fff;
 }
 
+.only-icon{
+    background: transparent !important;
+}
 
-.m-split-button .icon-after{
+.m-button.btn-transparent, .m-button.btn-transparent:hover{
+    color: var(--border-focus-color);
+    background-color: #fff;
 }
 
