--- a/src/assets/style/components/input.css
+++ b/src/assets/style/components/input.css
@@ -3,39 +3,17 @@
     position: relative;
     width: 100%;
     margin-bottom: 12px;
+    overflow: hidden;
 }
 
 .m-row-input .m-input-wrapper{
     width: 100%;
 }
 
-.m-row-input .m-input{
-    font-size: 16px;
-    color: #212121;
-    line-height: 1.2;
-    display: block;
-    background: transparent;
-    border: 1px solid var(--border-input-color);
-    width: 100%;
-    height: 48px;
-    padding: 14px 16px 16px 16px;
-    border-radius: 4px;
-}
 /**
     Khai báo cho tất cả input
 **/
 
-.m-input:focus-within{
-    border-color: #3892d4 !important;
-}
-
-.m-input:active{
-    border-color: #3892d4 !important;
-}
-
-.m-input[invalid]{
-    border-color: red;
-}
 
 
 .m-checkbox {
@@ -77,7 +55,20 @@
 
 .m-row-input{
     position: relative;
+    height: var(--input-height);
+    width: 100%;
+    border-radius: 4px;
 }
+
+.m-row-input input{
+    padding: 7px 16px 8px 4px;
+    width: 100%;
+    border-radius: 4px;
+
+}
+
+
+
 
 
 .m-row-input > .m-input-error-label {
@@ -86,17 +77,44 @@
     left: 50%;
     z-index: var(--z-index-error-label);
     transform: translate(-50%, 10px);
-    background-color: #333;
+    background-color: #a7a6a6;
     color: #fff;
     padding: 6px;
     white-space: nowrap;
     display: none;
   }
+
+.m-input-border{
+    border: 1px solid var(--border-default-color);
+}
+
+.m-input-border:focus, .m-input-border:hover{
+    border-color: var(--border-focus-color);
+    box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.1);
+}
   
-  .m-row-input > .m-input-border[invalid]:hover ~ .m-input-error-label,
-  .m-input-border[invalid]:hover .m-input-error-label{
+  .m-row-input.invalid:hover ~ .m-input-error-label,
+  .m-input-border.invalid:hover .m-input-error-label{
     display: block;
   }
+
+  .m-row-input.invalid{
+    border-color: var(--danger);
+}
+
+.m-row-input.input-xl{
+    height: 48px;
+}
+
+.m-row-input.input-xl input{
+    font-size: 16px;
+    color: #212121;
+    line-height: 20px;
+    display: block;
+    background: transparent;
+    padding: 14px 16px 14px 16px;
+    border-radius: 4px;
+}
 
 
 
