--- a/src/assets/style/base/icon.css
+++ b/src/assets/style/base/icon.css
@@ -403,6 +403,14 @@
   background-color: #666666;
 }
 
+.mi-attachment-v2{
+  background: url(@/assets/icon/icon.svg) -708px -612px no-repeat;
+}
+
+.mi-attachment-excel{
+  background: url(@/assets/icon/icon.svg) -644px -291px no-repeat;
+}
+
 .mi-sub-task {
   -webkit-mask-position: -68px -36px;
   -moz-mask-position: -68px -36px;
@@ -527,6 +535,48 @@
   background: url(@/assets/icon/icon.svg) -196px -164px no-repeat;
 }
 
+.mi-calendar-circle{
+  background: url(@/assets/icon/icon.svg) -260px -164px no-repeat;
+}
+
+.mi-calendar-over-deadline{
+  -webkit-mask-image: url(@/assets/icon/icon.svg);
+  -moz-mask-image: url(@/assets/icon/icon.svg);
+  -ms-mask-image: url(@/assets/icon/icon.svg);
+  -o-mask-image: url(@/assets/icon/icon.svg);
+  mask-image: url(@/assets/icon/icon.svg);
+  -webkit-mask-position: -260px -164px;
+  -moz-mask-position: -260px -164px;
+  -ms-mask-position: -260px -164px;
+  -o-mask-position: -260px -164px;
+  mask-position: -260px -164px;
+  -webkit-mask-repeat: no-repeat;
+  -moz-mask-repeat: no-repeat;
+  -ms-mask-repeat: no-repeat;
+  -o-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  background-color: #e8384f;
+}
+
+.mi-calender-circle-img{
+  -webkit-mask-image: url(@/assets/icon/icon.svg);
+  -moz-mask-image: url(@/assets/icon/icon.svg);
+  -ms-mask-image: url(@/assets/icon/icon.svg);
+  -o-mask-image: url(@/assets/icon/icon.svg);
+  mask-image: url(@/assets/icon/icon.svg);
+  -webkit-mask-position: -260px -164px;
+  -moz-mask-position: -260px -164px;
+  -ms-mask-position: -260px -164px;
+  -o-mask-position: -260px -164px;
+  mask-position: -260px -164px;
+  -webkit-mask-repeat: no-repeat;
+  -moz-mask-repeat: no-repeat;
+  -ms-mask-repeat: no-repeat;
+  -o-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  background-color: #ffffff;
+}
+
 .mi-change-password{
   background: url(@/assets/icon/icon-user/change-password.svg);
   height: 40px;
@@ -554,4 +604,248 @@
   background-size: 24px;
   padding: 12px 12px;
   margin-left: 10px;
+}
+
+.mi-user-blue{
+  -webkit-mask-image: url(@/assets/icon/icon.svg);
+  -moz-mask-image: url(@/assets/icon/icon.svg);
+  -ms-mask-image: url(@/assets/icon/icon.svg);
+  -o-mask-image: url(@/assets/icon/icon.svg);
+  mask-image: url(@/assets/icon/icon.svg);
+  -webkit-mask-position: -456px -328px;
+  -moz-mask-position: -456px -328px;
+  -ms-mask-position: -456px -328px;
+  -o-mask-position: -456px -328px;
+  mask-position: -456px -328px;
+  -webkit-mask-repeat: no-repeat;
+  -moz-mask-repeat: no-repeat;
+  -ms-mask-repeat: no-repeat;
+  -o-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  background-color: #2196f3;
+}
+
+.mi-lock{
+  -webkit-mask-image: url(@/assets/icon/icon.svg);
+  -moz-mask-image: url(@/assets/icon/icon.svg);
+  -ms-mask-image: url(@/assets/icon/icon.svg);
+  -o-mask-image: url(@/assets/icon/icon.svg);
+  mask-image: url(@/assets/icon/icon.svg);
+  -webkit-mask-position: -644px -164px;
+  -moz-mask-position: -644px -164px;
+  -ms-mask-position: -644px -164px;
+  -o-mask-position: -644px -164px;
+  mask-position: -644px -164px;
+  -webkit-mask-repeat: no-repeat;
+  -moz-mask-repeat: no-repeat;
+  -ms-mask-repeat: no-repeat;
+  -o-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  background-color: #666666;
+}
+
+.mi-infomation{
+  -webkit-mask-image: url(@/assets/icon/icon.svg);
+  -moz-mask-image: url(@/assets/icon/icon.svg);
+  -ms-mask-image: url(@/assets/icon/icon.svg);
+  -o-mask-image: url(@/assets/icon/icon.svg);
+  mask-image: url(@/assets/icon/icon.svg);
+  -webkit-mask-position: -68px -132px;
+  -moz-mask-position: -68px -132px;
+  -ms-mask-position: -68px -132px;
+  -o-mask-position: -68px -132px;
+  mask-position: -68px -132px;
+  -webkit-mask-repeat: no-repeat;
+  -moz-mask-repeat: no-repeat;
+  -ms-mask-repeat: no-repeat;
+  -o-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  background-color: #666666;
+}
+
+.mi-edit-role{
+  background: url(@/assets/icon/icon.svg) -308px -836px no-repeat;
+}
+
+.mi-project-archive{
+  -webkit-mask-image: url(@/assets/icon/icon.svg);
+  -moz-mask-image: url(@/assets/icon/icon.svg);
+  -ms-mask-image: url(@/assets/icon/icon.svg);
+  -o-mask-image: url(@/assets/icon/icon.svg);
+  mask-image: url(@/assets/icon/icon.svg);
+  -webkit-mask-position: -420px -260px;
+  -moz-mask-position: -420px -260px;
+  -ms-mask-position: -420px -260px;
+  -o-mask-position: -420px -260px;
+  mask-position: -420px -260px;
+  -webkit-mask-repeat: no-repeat;
+  -moz-mask-repeat: no-repeat;
+  -ms-mask-repeat: no-repeat;
+  -o-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  background-color: #666666;
+}
+
+.mi-leave-project{
+  background: url(@/assets/icon/icon.svg) -357px -324px no-repeat;
+}
+
+.mi-delete-close{
+  -webkit-mask-image: url(@/assets/icon/icon.svg);
+  -moz-mask-image: url(@/assets/icon/icon.svg);
+  -ms-mask-image: url(@/assets/icon/icon.svg);
+  -o-mask-image: url(@/assets/icon/icon.svg);
+  mask-image: url(@/assets/icon/icon.svg);
+  -webkit-mask-position: -740px -356px;
+  -moz-mask-position: -740px -356px;
+  -ms-mask-position: -740px -356px;
+  -o-mask-position: -740px -356px;
+  mask-position: -740px -356px;
+  -webkit-mask-repeat: no-repeat;
+  -moz-mask-repeat: no-repeat;
+  -ms-mask-repeat: no-repeat;
+  -o-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  background: #e8384f;
+}
+
+.mi-comment{
+  -webkit-mask-image: url(@/assets/icon/icon.svg);
+  -moz-mask-image: url(@/assets/icon/icon.svg);
+  -ms-mask-image: url(@/assets/icon/icon.svg);
+  -o-mask-image: url(@/assets/icon/icon.svg);
+  mask-image: url(@/assets/icon/icon.svg);
+  -webkit-mask-position: -36px -36px;
+  -moz-mask-position: -36px -36px;
+  -ms-mask-position: -36px -36px;
+  -o-mask-position: -36px -36px;
+  mask-position: -36px -36px;
+  -webkit-mask-repeat: no-repeat;
+  -moz-mask-repeat: no-repeat;
+  -ms-mask-repeat: no-repeat;
+  -o-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  background-color: #666666;
+}
+
+.mi-more-custom{
+  -webkit-mask-image: url(@/assets/icon/icon.svg);
+  -moz-mask-image: url(@/assets/icon/icon.svg);
+  -ms-mask-image: url(@/assets/icon/icon.svg);
+  -o-mask-image: url(@/assets/icon/icon.svg);
+  mask-image: url(@/assets/icon/icon.svg);
+  -webkit-mask-position: -356px -36px;
+  -moz-mask-position: -356px -36px;
+  -ms-mask-position: -356px -36px;
+  -o-mask-position: -356px -36px;
+  mask-position: -356px -36px;
+  -webkit-mask-repeat: no-repeat;
+  -moz-mask-repeat: no-repeat;
+  -ms-mask-repeat: no-repeat;
+  -o-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  background-color: #666666;
+}
+
+.mi-more{
+  -webkit-mask-image: url(@/assets/icon/icon.svg);
+  -moz-mask-image: url(@/assets/icon/icon.svg);
+  -ms-mask-image: url(@/assets/icon/icon.svg);
+  -o-mask-image: url(@/assets/icon/icon.svg);
+  mask-image: url(@/assets/icon/icon.svg);
+  -webkit-mask-position: -356px -36px;
+  -moz-mask-position: -356px -36px;
+  -ms-mask-position: -356px -36px;
+  -o-mask-position: -356px -36px;
+  mask-position: -356px -36px;
+  -webkit-mask-repeat: no-repeat;
+  -moz-mask-repeat: no-repeat;
+  -ms-mask-repeat: no-repeat;
+  -o-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  background-color: #666666;
+  background-image: none;
+}
+
+.mi-more:hover{
+  background-color: var(--primary-color) !important;
+}
+
+.mi-pencil-edit{
+  -webkit-mask-image: url(@/assets/icon/icon.svg);
+  -moz-mask-image: url(@/assets/icon/icon.svg);
+  -ms-mask-image: url(@/assets/icon/icon.svg);
+  -o-mask-image: url(@/assets/icon/icon.svg);
+  mask-image: url(@/assets/icon/icon.svg);
+  -webkit-mask-position: -676px -356px;
+  -moz-mask-position: -676px -356px;
+  -ms-mask-position: -676px -356px;
+  -o-mask-position: -676px -356px;
+  mask-position: -676px -356px;
+  -webkit-mask-repeat: no-repeat;
+  -moz-mask-repeat: no-repeat;
+  -ms-mask-repeat: no-repeat;
+  -o-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  background-color: #616161;
+}
+
+.mi-send-blue{
+  background: url(@/assets/icon/icon.svg) -613px -99px no-repeat;
+}
+
+.mi-task-log-action-Task{
+  background: url(@/assets/icon/icon.svg) -192px -352px no-repeat;
+}
+
+.mi-task-log-action-PerformerID{
+  background: url(@/assets/icon/icon.svg) -160px -352px no-repeat;
+}
+
+.mi-task-log-action-UpdateTaskDeadline{
+  background: url(@/assets/icon/icon.svg) -64px -320px  no-repeat;
+}
+
+.mi-task-log-action-Description{
+  background: url(@/assets/icon/icon.svg) -32px -384px  no-repeat;
+}
+
+.mi-task-log-action-Checklist{
+  background: url(@/assets/icon/icon.svg) -96px -384px  no-repeat;
+}
+
+.mi-task-log-action-Progress{
+  background: url(@/assets/icon/icon.svg) -224px -352px  no-repeat;
+}
+
+.mi-task-log-action-Attachment{
+  background: url(@/assets/icon/icon.svg) -96px -320px  no-repeat;
+}
+
+.mi-task-log-action-TaskComment{
+  background: url(@/assets/icon/icon.svg) -128px -352px  no-repeat;
+}
+
+.mi-reload{
+  background: url(@/assets/icon/icon.svg) -548px -356px  no-repeat;
+}
+
+.mi-grid-sort-A{
+  background: url(@/assets/icon/icon.svg) -40px -456px no-repeat;
+}
+
+.mi-grid-sort-user{
+  background: url(@/assets/icon/icon.svg) -72px -456px no-repeat;
+}
+
+.mi-grid-sort-calendar{
+  background: url(@/assets/icon/icon.svg) -104px -456px no-repeat;
+}
+
+.mi-grid-sort-nextweek{
+  background: url(@/assets/icon/icon.svg) -136px -458px no-repeat;
+}
+
+.mi-grid-sort-taskgroup{
+  background: url(@/assets/icon/icon.svg) -541px -780px no-repeat;
 }
