--- a/src/assets/style/components/input.css
+++ b/src/assets/style/components/input.css
@@ -1,164 +1,163 @@
-
 .m-row-input {
-    position: relative;
-    width: 100%;
-    margin-bottom: 12px;
-    overflow: hidden;
+  position: relative;
+  width: 100%;
+  margin-bottom: 12px;
+  overflow: hidden;
 }
 
-.m-row-input .m-input-wrapper{
-    width: 100%;
+.m-row-input .m-input-wrapper {
+  width: 100%;
 }
 
 /**
     Khai báo cho tất cả input
 **/
 
-
-
 .m-checkbox {
-    height: 14px;
-    background-image: url('/src/assets/icon/checkbox.axd');
-    background-position: 50% -2px;
-    background-repeat: no-repeat;
-    background-color: transparent;
+  height: 14px;
+  background-image: url("/src/assets/icon/checkbox.axd");
+  background-position: 50% -2px;
+  background-repeat: no-repeat;
+  background-color: transparent;
 }
 
-.m-checkbox.disable{
-    pointer-events: none;
-    cursor: none;
+.m-checkbox.disable {
+  pointer-events: none;
+  cursor: none;
 }
 
 .m-checkbox.checked {
-    background-image: url('/src/assets/icon/checked.axd');
+  background-image: url("/src/assets/icon/checked.axd");
 }
 
-.m-table thead .m-checkbox{
-    width: 34px;
+.m-table thead .m-checkbox {
+  width: 34px;
 }
 
-.m-textarea, .m-textarea:disabled{
-    width: 100%;
-    height: 60px;
-    outline: none;
-    resize: none;
-    border: 1px solid #cfcfcf;
-    padding: 4px 6px;
-    overflow: auto;
-    background-color: #fff;
-    cursor: auto;
+.m-textarea,
+.m-textarea:disabled {
+  width: 100%;
+  height: 60px;
+  outline: none;
+  resize: none;
+  border: 1px solid #cfcfcf;
+  padding: 4px 6px;
+  overflow: auto;
+  background-color: #fff;
+  cursor: auto;
 }
 
-.m-textarea:focus, .m-textarea:disabled:focus {
-    border-color: var(--primary-color);
+.m-textarea:focus,
+.m-textarea:disabled:focus {
+  border-color: var(--primary-color);
 }
 
-.m-row-input{
-    position: relative;
-    height: var(--input-height);
-    width: 100%;
-    border-radius: 4px;
+.m-row-input {
+  position: relative;
+  height: var(--input-height);
+  width: 100%;
+  border-radius: 4px;
 }
 
-.m-row-input input{
-    padding: 7px 16px 8px 4px;
-    width: 100%;
-    border-radius: 4px;
-
+.m-row-input input {
+  padding: 7px 16px 8px 4px;
+  width: 100%;
+  border-radius: 4px;
 }
-
-
-
-
 
 .m-row-input > .m-input-error-label {
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    z-index: var(--z-index-error-label);
-    transform: translate(-50%, 10px);
-    background-color: #a7a6a6;
-    color: #fff;
-    padding: 6px;
-    white-space: nowrap;
-    display: none;
-  }
-
-.m-input-border{
-    border: 1px solid var(--border-default-color);
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  z-index: var(--z-index-error-label);
+  transform: translate(-50%, 10px);
+  background-color: #a7a6a6;
+  color: #fff;
+  padding: 6px;
+  white-space: nowrap;
+  display: none;
 }
 
-.m-input-border:focus, .m-input-border:hover{
-    border-color: var(--border-focus-color);
-    box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.1);
-}
-  
-  .m-row-input.invalid:hover ~ .m-input-error-label,
-  .m-input-border.invalid:hover .m-input-error-label{
-    display: block;
-  }
-
-  .m-row-input.invalid{
-    border-color: var(--danger);
+.m-input-border {
+  border: 1px solid var(--border-default-color);
 }
 
-.m-row-input.input-xl{
-    height: 48px;
+.m-input-border:focus,
+.m-input-border:focus-within,
+.m-input-border:hover {
+  border-color: var(--border-focus-color);
+  box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.1);
 }
 
-.m-row-input.input-xl input{
-    font-size: 16px;
-    color: #212121;
-    line-height: 20px;
-    display: block;
-    background: transparent;
-    padding: 14px 16px 14px 16px;
-    border-radius: 4px;
+.m-row-input.invalid:hover ~ .m-input-error-label,
+.m-input-border.invalid:hover .m-input-error-label {
+  display: block;
 }
 
+.m-row-input.invalid {
+  border-color: var(--danger);
+}
 
+.m-row-input.input-xl {
+  height: 48px;
+}
+
+.m-row-input.input-l {
+  height: 38px;
+  line-height: 36px;
+}
+
+.m-row-input.input-xl input {
+  font-size: 16px;
+  color: #212121;
+  line-height: 20px;
+  display: block;
+  background: transparent;
+  padding: 14px 16px 14px 16px;
+  border-radius: 4px;
+}
 
 /* custom input radio  */
 .radio-wrapper {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-.radio-wrapper label{
-	margin-right: 10px;
-    margin-left: 10px;
+.radio-wrapper label {
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
-.radio-wrapper label.disable{
-    pointer-events: none;
+.radio-wrapper label.disable {
+  pointer-events: none;
 }
 
 input[type="radio"] {
-	opacity: 0;
+  opacity: 0;
 }
 
 input[type="radio"] + label {
-	position: relative;
+  position: relative;
 }
 
 input[type="radio"] + label:before {
-	position: absolute;
-	content: "";
-	top: 50%;
-	left: -24px;
-	transform: translate(0%, -50%);
-	width: 9px;
-	height: 9px;
-	border-radius: 50%;
-	outline-offset: 4px;
-	outline: 1px solid #888888;
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: -24px;
+  transform: translate(0%, -50%);
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  outline-offset: 4px;
+  outline: 1px solid #888888;
 }
 
 input[type="radio"]:checked + label:before {
-	outline-color: var(--primary-color);
-	background: var(--primary-color);
+  outline-color: var(--primary-color);
+  background: var(--primary-color);
 }
 
-input:disabled{
-    background-color: #e8f6ff;
+input:disabled {
+  background-color: #e8f6ff;
 }
