--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -1,5 +1,6 @@
 @import url(./base/icon.css);
 @import url(./typography.css);
+@import url(./customize.css);
 
 * {
   box-sizing: border-box;
@@ -27,7 +28,7 @@ select,
 textarea,
 table {
   box-sizing: border-box;
-  font-size: 16px;
+  font-size: 15px;
   outline: none;
   border: none;
 }
@@ -55,6 +56,8 @@ h5,
 h6 {
   margin-top: 0;
   margin-bottom: 0;
+  margin-block-start: 0 !important;
+  margin-block-end: 0 !important;
 }
 
 @font-face {
@@ -87,3 +90,4 @@ h6 {
   max-width: unset;
   
 }
+
