--- a/src/assets/style/typography.css
+++ b/src/assets/style/typography.css
@@ -1,49 +1,89 @@
-
-
-.title-medium{
-    font-size: 17px;
-    font-family: "GoogleSans-Bold" ,Roboto, Helvetica, Arial, sans-serif !important;
-    font-weight: 300;
-    color: var(--text-color-default);
+.title-medium {
+  font-size: 17px;
+  font-family: "GoogleSans-Bold", Roboto, Helvetica, Arial, sans-serif !important;
+  font-weight: 300;
+  color: var(--text-color-default);
 }
 
-.text-large{
-    font-size: 20px;
-    font-weight: 700;
-    font-family: "GoogleSans-Bold" ,Roboto, Helvetica, Arial, sans-serif !important;    
+.title-small{
+  font-size: 13px;
+  font-weight: 700;
+  font-family: "GoogleSans-Bold", Roboto, Helvetica, Arial, sans-serif !important;
 }
 
-.text-medium{
-    font-size: 15px !important;
-    font-family: "GoogleSans-Regular" ,Roboto, Helvetica, Arial, sans-serif !important;
-    font-weight: 500 !important;
-    color: var(--text-color-default) !important;
+.text-large {
+  font-size: 20px;
+  font-weight: 700;
+  font-family: "GoogleSans-Bold", Roboto, Helvetica, Arial, sans-serif !important;
 }
 
-
-.text-small{
-    font-size: 13px;
-    font-family: "GoogleSans-Regular" ,Roboto, Helvetica, Arial, sans-serif !important;
-    font-weight: 400;
-    color: var(--text-color-default);
+.text-xl {
+  font-size: 24px;
+  font-weight: 700;
+  font-family: "GoogleSans-Bold", Roboto, Helvetica, Arial, sans-serif !important;
+  color: var(--text-color-default);
 }
 
-.text-link{
-    font-size: 15px !important;
-    font-family: "GoogleSans-Regular" ,Roboto, Helvetica, Arial, sans-serif !important;
-    font-weight: 400 !important;
-    color: var(--border-focus-color) !important;
+.text-medium {
+  font-size: 15px !important;
+  font-family: "GoogleSans-Regular", Roboto, Helvetica, Arial, sans-serif !important;
+  font-weight: 500 !important;
+  color: var(--text-color-default) !important;
 }
 
-.text-input-m{
-    font-size: 15px !important;
-    font-family: "GoogleSans-Regular" ,Roboto, Helvetica, Arial, sans-serif !important;
-    font-weight: 400 !important;
-    color: var(--text-color-default) !important;
-    line-height: 20px;
+.text-small {
+  font-size: 13px;
+  font-family: "GoogleSans-Regular", Roboto, Helvetica, Arial, sans-serif !important;
+  font-weight: 400;
+  color: var(--text-color-default);
 }
 
+.text-link {
+  font-size: 15px !important;
+  font-family: "GoogleSans-Regular", Roboto, Helvetica, Arial, sans-serif !important;
+  font-weight: 400 !important;
+  color: var(--border-focus-color) !important;
+}
 
-.line-small{
-    line-height: 1.35715;
+.text-link-small{
+  font-size: 13px;
+  font-weight: 400 !important;
+  color: var(--primary-color);
+}
+
+.text-input-m {
+  font-size: 15px !important;
+  font-family: "GoogleSans-Regular", Roboto, Helvetica, Arial, sans-serif !important;
+  font-weight: 400 !important;
+  color: var(--text-color-default) !important;
+  line-height: 20px;
+}
+
+.text-primary {
+  color: var(--primary-color);
+}
+
+.text-fade{
+    color: #666666;
+}
+
+.text-bold {
+  font-weight: bold;
+}
+
+.text-bold-l {
+  font-weight: 500;
+}
+
+.line-small {
+  line-height: 1.35715;
+}
+
+.text-hover-link:hover{
+  color: var(--primary-color);
+  
+}
+
+.text-line-throught{
+  text-decoration: line-through;
 }
