--- a/src/assets/style/base/icon.css
+++ b/src/assets/style/base/icon.css
@@ -1,4 +1,11 @@
 /* Base Icon class */
+.mi-48 {
+  width: 48px;
+  height: 48px;
+  min-width: 48px;
+  min-height: 48px;
+}
+
 .mi-32 {
   width: 32px;
   height: 32px;
